Algunas pruebas unitarias mas